MicroservicesDemoWithLocust/projects/qwiklabs-gcp-01-b390f77d9358/ComputeFirewall/default-allow-icmp.tf
resource "google_compute_firewall" "default_allow_icmp" {
  allow {
    protocol = "icmp"
  }

  description   = "Allow ICMP from anywhere"
  direction     = "INGRESS"
  name          = "default-allow-icmp"
  network       = "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-b390f77d9358/global/networks/default"
  priority      = 65534
  project       = "qwiklabs-gcp-01-b390f77d9358"
  source_ranges = ["0.0.0.0/0"]
}
# terraform import google_compute_firewall.default_allow_icmp projects/qwiklabs-gcp-01-b390f77d9358/global/firewalls/default-allow-icmp
